find_package(OpenGL)

find_package(GLUT)
if (GLUT_FOUND AND OPENGL_FOUND)
	add_executable(MC33GLUT MC33_GLUT.cpp)
	target_link_libraries(MC33GLUT ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})
	if (TARGET MC33)
		target_link_libraries(MC33GLUT MC33)
	elseif (TARGET MC33static)
		target_link_libraries(MC33GLUT MC33static)
	endif (TARGET MC33)
endif()

find_package(FLTK)
if (FLTK_FOUND AND OPENGL_FOUND)
	add_executable(MC33FLTK MC33_FLTK.cpp)
	target_link_libraries(MC33FLTK ${FLTK_LIBRARIES} ${OPENGL_LIBRARIES})
	if (TARGET MC33)
		target_link_libraries(MC33FLTK MC33)
	elseif (TARGET MC33static)
		target_link_libraries(MC33FLTK MC33static)
	endif (TARGET MC33)
endif()


